update, create own api gateway

--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -157,7 +157,7 @@ jobs:
           npm install serverless -g
           npm install
           serverless deploy --config ./serverless-experimental.yml --stage dev${PR} | tee output.log
-          serverless deploy --config ./serverless-experimental.yml --stage redirect${PR} | tee output.log
+          serverless deploy --config ./serverless-redirect.yml --stage redirect${PR} | tee output.log
           serverless invoke --config ./serverless-experimental.yml --function create_database --stage dev${PR}
           serverless invoke --config ./serverless-experimental.yml --function reg_core_migrate --stage dev${PR}
           serverless invoke --config ./serverless-experimental.yml --function populate_content --stage dev${PR}
