--- a/solution/backend/serverless-redirect.yml
+++ b/solution/backend/serverless-redirect.yml
@@ -5,12 +5,13 @@ provider:
   runtime: python3.6
   region: us-east-1
 
-redirectFunction:
-  handler: redirect_lambda.handler
-  timeout: 30
-  events:
-    - http: ANY /redirect
-    - http: ANY /redirect/{proxy+}
+functions:
+  redirectFunction:
+    handler: redirect_lambda.handler
+    timeout: 30
+    events:
+      - http: ANY /redirect
+      - http: ANY /redirect/{proxy+}
 custom:
   wsgi:
     app: handler.application
