EREGCSC-2528 Extract text from webpages with no file extension (#1182)
* Switch back to using mime types for type detection

* Switch Docker image base, update tests

* Ignore application/octet-stream

* Simplify syntax

* Switch from python-magic & filetype to Google's Magika library

--- a/solution/text-extractor/Dockerfile
+++ b/solution/text-extractor/Dockerfile
@@ -5,21 +5,22 @@ ENV EXTERNAL_PORT="6000"
 #ENV PROXY_PARAMS="--enable-async"
 ENV PROXY_PARAMS=""
 ENV STARTUP_CMD="app.text_extractor.handler"
-# Copy lambda-proxy
-COPY lambda-proxy /proxy
-
-# Install packages required by lambda-proxy
-RUN pip install -r /proxy/requirements.txt
 
 # Copy function code
 # Will be overridden locally
 COPY text-extractor ${LAMBDA_TASK_ROOT}/app
 
 # Install binary dependencies
-RUN xargs yum install -y < app/packages.txt
+RUN yum install -y poppler-utils
 
 # Install the required packages
 RUN pip install -r app/requirements.txt
+
+# Copy lambda-proxy
+COPY lambda-proxy /proxy
+
+# Install packages required by lambda-proxy
+RUN pip install -r /proxy/requirements.txt
 
 # Set the custom entrypoint to run lambda-proxy on startup
 ENTRYPOINT /proxy/startup.sh
