Allow deploy to prod again

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        #environment: ["dev", "val", "prod"]
-        environment: ["dev"]
+        environment: ["dev", "val", "prod"]
     environment:
       name: ${{ matrix.environment }}
       url: ${{ steps.deploy-regulations-site-server.outputs.url }}
