--- a/solution/static-assets/serverless.yml
+++ b/solution/static-assets/serverless.yml
@@ -67,7 +67,18 @@ resources:
         BucketName: eregs-${self:custom.stage}-cloudfront-logs
         VersioningConfiguration:
           Status: Enabled
-          AccessControl: LogDeliveryWrite  # This line enables ACL access
+    CloudFrontLogsBucketPolicy:
+      Type: "AWS::S3::BucketPolicy"
+      Properties:
+        Bucket: !Ref CloudFrontLogsBucket
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+            - Effect: Allow
+              Principal:
+                Service: "delivery.logs.amazonaws.com"
+              Action: "s3:PutObject"
+              Resource: !Sub "arn:aws:s3:::${CloudFrontLogsBucket}/*"
 
     CloudFrontOriginAccessIdentity:
       Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
