--- a/solution/backend/serverless-redirect.yml
+++ b/solution/backend/serverless-redirect.yml
@@ -23,8 +23,8 @@ functions:
     handler: redirect_lambda.handler
     timeout: 30
     events:
-      - http: ANY /redirect
-      - http: ANY /redirect/{proxy+}
+      - http: ANY /
+      - http: ANY /{proxy+}
 resources:
   Resources:
     LambdaFunctionRole:
