--- a/solution/static-assets/requirements.txt
+++ b/solution/static-assets/requirements.txt
@@ -1,23 +1,23 @@
 Cryptography==3.4.8
-Werkzeug==0.15.5
-zappa-django-utils==0.4.1
+Werkzeug
+zappa-django-utils
 boto3
 django-debug-toolbar
-django>=4,<5
+django>=5,<6
 requests
 djangorestframework
 psycopg2-binary
 django-solo
-python-dateutil~=2.8.2
+python-dateutil
 django-cors-headers
-drf-spectacular==0.24.2
+drf-spectacular
 django-model-utils
 django-jsonform
 django-csp
 httpx
 ruff
 pytest
-pytest-django==4.5
+pytest-django
 pre-commit
 defusedxml
 mozilla-django-oidc
