chore: add optional rollup dependency to eregs-vite to fix build-and-deploy-vue

--- a/solution/ui/regulations/eregs-vite/package.json
+++ b/solution/ui/regulations/eregs-vite/package.json
@@ -23,5 +23,8 @@
     "sass": "^1.69.3",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^5.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.13.0"
   }
 }
