--- a/solution/ui/regulations/eregs-component-lib/package.json
+++ b/solution/ui/regulations/eregs-component-lib/package.json
@@ -24,8 +24,8 @@
     "@vitejs/plugin-vue": "^4.5.0",
     "eslint-plugin-vuetify": "^2.2.0",
     "fast-glob": "^3.2.12",
-    "unplugin-vue-components": "^0.25.2",
-    "vite": "^5.0"
+    "vite": "^5.0",
+    "vite-plugin-vuetify": "^2.0.3"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.13.0"
