update code use eregsuser instead of eregs for local

--- a/solution/docker-compose.yml
+++ b/solution/docker-compose.yml
@@ -7,7 +7,7 @@ services:
   db:
     image: postgres:15.2
     environment:
-      POSTGRES_USER: eregs
+      POSTGRES_USER: eregsuser
       POSTGRES_PASSWORD: sgere
       POSTGRES_DB: eregs
     ports:
