--- a/solution/ui/regulations/eregs-vite/package.json
+++ b/solution/ui/regulations/eregs-vite/package.json
@@ -21,8 +21,8 @@
     "@vitejs/plugin-vue": "^4.5.0",
     "eslint-plugin-vuetify": "^2.2.0",
     "sass": "^1.69.3",
-    "unplugin-vue-components": "^0.25.2",
-    "vite": "^5.0"
+    "vite": "^5.0",
+    "vite-plugin-vuetify": "^2.0.3"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.13.0"
