--- a/solution/static-assets/serverless.yml
+++ b/solution/static-assets/serverless.yml
@@ -78,11 +78,25 @@ resources:
         PolicyDocument:
           Version: '2012-10-17'
           Statement:
-            - Effect: Allow
+            - Sid: "EnforceSSLOnly"
+              Effect: "Deny"
+              Principal: "*"
+              Action: "s3:*"
+              Resource:
+                - !Sub "arn:aws:s3:::${CloudFrontLogsBucket}/*"
+                - !Sub "arn:aws:s3:::${CloudFrontLogsBucket}"
+              Condition:
+                Bool:
+                  "aws:SecureTransport": "false"
+            - Sid: "AllowCloudFrontLogsDelivery"
+              Effect: "Allow"
               Principal:
                 Service: "delivery.logs.amazonaws.com"
               Action: "s3:PutObject"
               Resource: !Sub "arn:aws:s3:::${CloudFrontLogsBucket}/*"
+              Condition:
+                StringEquals:
+                  "s3:x-amz-acl": "bucket-owner-full-control"
 
     CloudFrontOriginAccessIdentity:
       Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
