add deletionpolicy to delete the bucket after the cloudfront is removed

--- a/solution/static-assets/serverless.yml
+++ b/solution/static-assets/serverless.yml
@@ -71,6 +71,7 @@ resources:
         VersioningConfiguration:
           Status: Enabled
         AccessControl: LogDeliveryWrite
+      DeletionPolicy: Delete
     CloudFrontLogsBucketPolicy:
       Type: "AWS::S3::BucketPolicy"
       Properties:
