--- a/solution/ui/regulations/package.json
+++ b/solution/ui/regulations/package.json
@@ -20,7 +20,7 @@
     "@cmsgov/design-system": "^2.5.0",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@vitejs/plugin-vue": "^4.5.0",
-    "@vue/test-utils": "^1.3.5",
+    "@vue/test-utils": "^2.4.5",
     "flush-promises": "^1.0.2",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
@@ -28,9 +28,8 @@
     "react-dom": "16.x",
     "sass": "^1.69.3",
     "vue": "^3.4.21",
-    "vuetify": "^3.5.11",
     "vue-loader": "^16.0.0",
-    "vue-template-compiler": "^2.7.0"
+    "vuetify": "^3.5.11"
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
@@ -41,7 +40,7 @@
     "@storybook/manager-webpack5": "^6.5.12",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/vue": "^6.5.12",
-    "@testing-library/vue": "^5.9.0",
+    "@testing-library/vue": "^8.0.3",
     "@vitest/coverage-c8": "^0.31.1",
     "@vue/component-compiler": "^4.2.4",
     "babel-loader": "^8.2.2",
