chore: pin all ubuntu-latest images to 22.04

--- a/.github/workflows/git-secrets.yaml
+++ b/.github/workflows/git-secrets.yaml
@@ -2,7 +2,7 @@ name: gitleaks
 on: [pull_request, push, workflow_dispatch]
 jobs:
   gitleaks-scan:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v3
     - name: Run gitlakes docker	    
