--- a/.github/workflows/ruff-action.yml
+++ b/.github/workflows/ruff-action.yml
@@ -2,7 +2,7 @@ name: Ruff
 on: [ push, pull_request, workflow_dispatch ]
 jobs:
   ruff:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
       - uses: chartboost/ruff-action@v1
