--- a/.github/workflows/snyk-test.yml
+++ b/.github/workflows/snyk-test.yml
@@ -12,7 +12,7 @@ permissions:
 jobs:
   snyk_run:
     name: Snyk Run (for PR)
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: github.event_name == 'pull_request'
     
     steps:
@@ -29,7 +29,7 @@ jobs:
   
   snyk_nightly_run:  
       name: Snyk Nightly Run (for nightly cron with JIRA)
-      runs-on: ubuntu-latest
+      runs-on: ubuntu-22.04
       if: github.event_name == 'schedule'
       steps:
         - name: Check out repository
