--- a/solution/static-assets/serverless.yml
+++ b/solution/static-assets/serverless.yml
@@ -40,19 +40,26 @@ resources:
     CleanupRole:
       Type: AWS::IAM::Role
       Properties:
+        Path: ${ssm:/account_vars/iam/path}
         AssumeRolePolicyDocument:
-          Version: "2012-10-17"
+          Version: '2012-10-17'
           Statement:
-            - Effect: "Allow"
+            - Effect: Allow
               Principal:
                 Service: "lambda.amazonaws.com"
               Action: "sts:AssumeRole"
+        PermissionsBoundary:
+          Fn::Join:
+            - ''
+            - - 'arn:aws:iam::'
+              - Ref: AWS::AccountId
+              - ${ssm:/account_vars/iam/permissions_boundary_policy}
         Policies:
           - PolicyName: "S3VersionDeletionPolicy"
             PolicyDocument:
-              Version: "2012-10-17"
+              Version: '2012-10-17'
               Statement:
-                - Effect: "Allow"
+                - Effect: Allow
                   Action:
                     - "s3:ListBucket"
                     - "s3:ListBucketVersions"
