--- a/solution/backend/serverless_functions/experimental_functions.yml
+++ b/solution/backend/serverless_functions/experimental_functions.yml
@@ -7,8 +7,26 @@ reg_site:
   layers:
     - ${cf:cmcs-eregs-static-assets-${self:custom.stage}.PythonRequirementsLambdaLayerQualifiedArn}
   events:
-    - http: ANY /
+    - http:
+        path: /
+        method: ANY
+        authorizer:
+          name: authorizer
+          resultTtlInSeconds: 0
+          identitySource: method.request.header.Authorization
+          type: request
     - http: ANY /{proxy+}
+        path: /
+        method: ANY
+        authorizer:
+          name: authorizer
+          resultTtlInSeconds: 0
+          identitySource: method.request.header.Authorization
+          type: request
+authorizer:
+  handler: authorizer.handler
+  layers:
+    - ${cf:cmcs-eregs-static-assets-${self:custom.stage}.PythonRequirementsLambdaLayerQualifiedArn}
 reg_core_migrate:
   environment:
     STAGE: ${self:custom.stage}
