--- a/solution/static-assets/serverless.yml
+++ b/solution/static-assets/serverless.yml
@@ -69,6 +69,7 @@ resources:
                     - "s3:GetBucketVersioning"
                     - "s3:DeleteObject"
                     - "s3:DeleteObjectVersion"
+                    - "s3:ListObjectVersion"
                   Resource:
                     - "arn:aws:s3:::eregs-${self:custom.stage}-cloudfront-logs"
                     - "arn:aws:s3:::eregs-${self:custom.stage}-cloudfront-logs/*"
