--- a/solution/static-assets/serverless.yml
+++ b/solution/static-assets/serverless.yml
@@ -66,10 +66,10 @@ resources:
                   Action:
                     - "s3:ListBucket"
                     - "s3:ListBucketVersions"
+                    - "s3:ListObjectVersions"
                     - "s3:GetBucketVersioning"
                     - "s3:DeleteObject"
                     - "s3:DeleteObjectVersion"
-                    - "s3:ListObjectVersion"
                   Resource:
                     - "arn:aws:s3:::eregs-${self:custom.stage}-cloudfront-logs"
                     - "arn:aws:s3:::eregs-${self:custom.stage}-cloudfront-logs/*"
