--- a/solution/static-assets/serverless.yml
+++ b/solution/static-assets/serverless.yml
@@ -66,6 +66,7 @@ resources:
                   Action:
                     - "s3:ListBucket"
                     - "s3:ListBucketVersions"
+                    - "s3:ListObjectVersions"
                     - "s3:GetBucketVersioning"
                     - "s3:DeleteObject"
                     - "s3:DeleteObjectVersion"
