--- a/solution/text-extractor/serverless.yml
+++ b/solution/text-extractor/serverless.yml
@@ -13,6 +13,8 @@ provider:
         file: text-extractor/Dockerfile
   environment:
     LOG_LEVEL: ${ssm:/eregulations/text_extractor/log_level}
+    HTTP_AUTH_USER: ${ssm:/eregulations/http/user}
+    HTTP_AUTH_PASSWORD: ${ssm:/eregulations/http/password}
 
 custom:
   stage: ${opt:stage, self:provider.stage}
