--- a/solution/backend/serverless_functions/val_functions.yml
+++ b/solution/backend/serverless_functions/val_functions.yml
@@ -3,12 +3,30 @@ reg_site:
     STATIC_URL: ${self:custom.settings.static_url}
     WORKING_DIR: /var/task
   handler: wsgi_handler.handler
+  timeout: 10
   layers:
     - ${cf:cmcs-eregs-static-assets-${self:custom.stage}.PythonRequirementsLambdaLayerQualifiedArn}
   events:
-    - http: ANY /
-    - http: ANY {proxy+}
-  timeout: 10
+    - http:
+        path: /
+        method: ANY
+        authorizer:
+          name: authorizer
+          resultTtlInSeconds: 0
+          identitySource: method.request.header.Authorization
+          type: request
+    - http:
+        path: /{proxy+}
+        method: ANY
+        authorizer:
+          name: authorizer
+          resultTtlInSeconds: 0
+          identitySource: method.request.header.Authorization
+          type: request
+authorizer:
+  handler: authorizer.handler
+  layers:
+    - ${cf:cmcs-eregs-static-assets-${self:custom.stage}.PythonRequirementsLambdaLayerQualifiedArn}
 reg_core_migrate:
   handler: migrate.handler
   layers:
