Instruct cypress to not send credentials to prod

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -168,3 +168,4 @@ jobs:
           config: baseUrl=${{ steps.deploy-regulations-site-server.outputs.url }}
         env:
           CYPRESS_DEPLOYING: true
+          CYPRESS_TEST_ENV: ${{ matrix.environment }}
