--- a/solution/parser/serverless-fr.yml
+++ b/solution/parser/serverless-fr.yml
@@ -12,6 +12,7 @@ provider:
     EREGS_USERNAME: ${ssm:/eregulations/http/user}
     EREGS_PASSWORD: ${ssm:/eregulations/http/password}
     EREGS_API_URL_V3: ${self:custom.settings.eregs_url}
+    STAGE_ENV: ${self:custom.stage}
   deploymentBucket:
     blockPublicAccess: true
   ecr:
