--- a/solution/ui/regulations/eregs-component-lib/package.json
+++ b/solution/ui/regulations/eregs-component-lib/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build:components": "LIB_NAME=components vite build",
+    "build:components": "LIB_NAME=components vite build --emptyOutDir",
     "watch-build:components": "LIB_NAME=components vite build --watch",
     "build:main": "LIB_NAME=main vite build",
     "watch-build:main": "LIB_NAME=main vite build --watch",
@@ -16,14 +16,17 @@
     "lodash": "^4.17.21",
     "mitt": "^3.0.1",
     "shelljs": "^0.8.5",
-    "vite-plugin-css-injected-by-js": "^3.3.1",
-    "vue": "^2.7.15",
-    "vuetify": "^2.7.1"
+    "vue": "^3.4.21",
+    "vuetify": "^3.5.11"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue2": "^2.3.1",
+    "@vitejs/plugin-vue": "^4.5.0",
+    "eslint-plugin-vuetify": "^2.2.0",
     "fast-glob": "^3.2.12",
-    "unplugin-vue-components": "^0.25.0",
-    "vite": "^5.0"
+    "vite": "^5.0",
+    "vite-plugin-vuetify": "^2.0.3"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.13.0"
   }
 }
