--- a/solution/ui/regulations/eregs-vite/package.json
+++ b/solution/ui/regulations/eregs-vite/package.json
@@ -12,15 +12,19 @@
   "dependencies": {
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
-    "vue": "^2.7.16",
-    "vue-router": "^3.6.5",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0",
     "vue-template-compiler": "^2.7.16",
-    "vuetify": "^2.7.1"
+    "vuetify": "^3.5.11"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue2": "^2.3.1",
-    "sass": "~1.32",
-    "unplugin-vue-components": "^0.25.0",
-    "vite": "^5.0"
+    "@vitejs/plugin-vue": "^4.5.0",
+    "eslint-plugin-vuetify": "^2.2.0",
+    "sass": "^1.69.3",
+    "vite": "^5.0",
+    "vite-plugin-vuetify": "^2.0.3"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.13.0"
   }
 }
