chore: add emptyOutDir to watch and build commands for more reliable dev watch

--- a/solution/ui/regulations/eregs-component-lib/package.json
+++ b/solution/ui/regulations/eregs-component-lib/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "build:components": "LIB_NAME=components vite build --emptyOutDir",
-    "watch-build:components": "LIB_NAME=components vite build --watch",
+    "watch-build:components": "LIB_NAME=components vite build --watch --emptyOutDir",
     "build:main": "LIB_NAME=main vite build",
-    "watch-build:main": "LIB_NAME=main vite build --watch",
+    "watch-build:main": "LIB_NAME=main vite build --watch emptyOutDir",
     "build": "npm run build:components && npm run build:main"
   },
   "dependencies": {
