[Snyk] Upgrade chokidar from 3.5.3 to 3.6.0 (#1254)
* fix: upgrade chokidar from 3.5.3 to 3.6.0

Snyk has created this PR to upgrade chokidar from 3.5.3 to 3.6.0.

See this package in npm:
https://www.npmjs.com/package/chokidar

See this project in Snyk:
https://app.snyk.io/org/eregs-x7s/project/563526b1-d7cd-4b7a-9ffa-394ec8cef328?utm_source=github&utm_medium=referral&page=upgrade-pr

* chore: add emptyOutDir to watch and build commands for more reliable dev watch

---------

Co-authored-by: snyk-bot <snyk-bot@snyk.io>
Co-authored-by: Phil Reese <preese@fearless.tech>

--- a/solution/ui/regulations/eregs-component-lib/package.json
+++ b/solution/ui/regulations/eregs-component-lib/package.json
@@ -5,13 +5,13 @@
   "type": "module",
   "scripts": {
     "build:components": "LIB_NAME=components vite build --emptyOutDir",
-    "watch-build:components": "LIB_NAME=components vite build --watch",
+    "watch-build:components": "LIB_NAME=components vite build --watch --emptyOutDir",
     "build:main": "LIB_NAME=main vite build",
-    "watch-build:main": "LIB_NAME=main vite build --watch",
+    "watch-build:main": "LIB_NAME=main vite build --watch emptyOutDir",
     "build": "npm run build:components && npm run build:main"
   },
   "dependencies": {
-    "chokidar": "^3.5.3",
+    "chokidar": "^3.6.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "mitt": "^3.0.1",
