--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -159,10 +159,10 @@ jobs:
           serverless deploy --config ./serverless-experimental.yml --stage dev${PR} | tee output.log
           serverless invoke --config ./serverless-experimental.yml --function create_database --stage dev${PR}
           serverless invoke --config ./serverless-experimental.yml --function reg_core_migrate --stage dev${PR}
-          serverless invoke --config ./serverless-experimental.yml --function populate_content --stage dev${PR}
           serverless invoke --config ./serverless-experimental.yml --function create_su --stage dev${PR}
-          serverless invoke --config ./serverless-experimental.yml --function index_resources --stage dev${PR}
-          echo "url=$(cat output.log | grep -m1 'ANY -' | cut -c 9-)" >> $GITHUB_OUTPUT
+          url=$(cat output.log | grep -m1 'ANY -' | cut -c 9-)
+          url=${url%/}
+          echo "url=$(echo $url)" >> $GITHUB_OUTPUT
           popd
   test-python:
     needs: [deploy-django]
