--- a/solution/static-assets/package.json
+++ b/solution/static-assets/package.json
@@ -4,6 +4,7 @@
   "description": "Serverless config for eRegs core",
   "private": true,
   "dependencies": {
+    "serverless": "^3.38.0",
     "serverless-cloudfront-invalidate": "^1.12.2",
     "serverless-python-requirements": "^5.4.0",
     "serverless-s3-sync": "^1.17.3"
