--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,14 +73,14 @@ jobs:
       - name: deploy static assets
         run: |
           pushd solution/static-assets
-          npm install serverless -g
+          npm install serverless@">=3.38.0 <4" -g
           npm install
           serverless deploy --stage ${{ matrix.environment }}
           popd
       - name: deploy text extractor lambda
         run: |
           pushd solution/text-extractor
-          npm install serverless -g
+          npm install serverless@">=3.38.0 <4" -g
           serverless deploy --stage ${{ matrix.environment }}
           popd
       - name: deploy regulations site server
@@ -89,7 +89,7 @@ jobs:
           RUN_ID: ${{ github.run_id }}
         run: |
           pushd solution/backend
-          npm install serverless -g
+          npm install serverless@">=3.38.0 <4" -g
           npm install
           serverless deploy --config ./serverless-redirect.yml --stage ${{ matrix.environment }} | tee output.log
           serverless deploy --stage ${{ matrix.environment }} | tee output.log
@@ -125,7 +125,7 @@ jobs:
         id: deploy-run-ecfr-parser
         run: |
           pushd solution/parser
-          npm install serverless -g
+          npm install serverless@">=3.38.0 <4" -g
           npm install
           serverless deploy --stage ${{ matrix.environment }} --config ./serverless-ecfr.yml
           AWS_CLIENT_TIMEOUT=360000 serverless invoke --function ecfr_parser --stage ${{ matrix.environment }} --config ./serverless-ecfr.yml
@@ -134,7 +134,7 @@ jobs:
         id: deploy-run-fr-parser
         run: |
           pushd solution/parser
-          npm install serverless -g
+          npm install serverless@">=3.38.0 <4" -g
           npm install
           serverless deploy --stage ${{ matrix.environment }} --config ./serverless-fr.yml
           AWS_CLIENT_TIMEOUT=360000 serverless invoke --function fr_parser --stage ${{ matrix.environment }} --config ./serverless-fr.yml
