--- a/.github/workflows/load-regulations.yml
+++ b/.github/workflows/load-regulations.yml
@@ -36,7 +36,7 @@ jobs:
         id: run-ecfr-parser
         run: |
           pushd serverless
-          npm install serverless -g
+          npm install serverless@">=3.38.0 <4" -g
           npm install
           AWS_CLIENT_TIMEOUT=360000 serverless invoke --config ./serverless-parser.yml --function ecfr_parser --stage ${{ matrix.environment }}
           popd
