--- a/.github/workflows/remove.yml
+++ b/.github/workflows/remove.yml
@@ -29,21 +29,21 @@ jobs:
       - name: remove regulations site server
         run: |
           pushd serverless/regulations
-          npm install serverless -g
+          npm install serverless@">=3.38.0 <4" -g
           npm install
           serverless remove
           popd
       - name: remove static assets
         run: |
           pushd serverless/static-assets/serverless
-          npm install serverless -g
+          npm install serverless@">=3.38.0 <4" -g
           npm install
           serverless remove
           popd
       - name: remove eCFR parser
         run: |
           pushd serverless
-          npm install serverless -g
+          npm install serverless@">=3.38.0 <4" -g
           npm install
           serverless remove --config ./serverless-parser.yml
           popd
