chore: update eslint; add vue-eslint-parser

--- a/solution/ui/regulations/.eslintrc.json
+++ b/solution/ui/regulations/.eslintrc.json
@@ -26,6 +26,7 @@
         "no-nested-ternary": "off",
         "prefer-template": "off",
         "vue/order-in-components": "off",
+        "vue/multi-word-component-names": "off",
         "vue/no-multiple-template-root": "off",
         "vue/no-unsupported-features": [
             "error",
