--- a/solution/ui/regulations/package.json
+++ b/solution/ui/regulations/package.json
@@ -44,7 +44,7 @@
     "@vitest/coverage-c8": "^0.31.1",
     "@vue/component-compiler": "^4.2.4",
     "babel-loader": "^8.2.2",
-    "eslint": "^8.3.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
@@ -60,6 +60,7 @@
     "storybook-addon-sass-postcss": "^0.1.3",
     "vite": "^5.2.11",
     "vitest": "^0.31.0",
+    "vue-eslint-parser": "^9.4.2",
     "webpack": "^5.76.0",
     "whatwg-fetch": "^3.6.2"
   },
